# DWARF

./: .gitignore  README.md  runpod_setup.sh
exploration/block_diagonal_analysis/: Cargo.toml
exploration/wavelet_tap_offset_interference/: Cargo.toml
verification/: Cargo.toml  DwarfAttention.lean  additive_combinatorics.lean  hop_analysis.py  lake-manifest.json  lakefile.toml  minimal_j13d.lean  test.lean  test_additive_theorems.lean  test_bind.lean  test_bind2.lean  test_bind3.lean  test_decide.lean  test_flatmap.lean  test_flatmap2.lean  test_flatmap3.lean  test_j12_j13d.lean  test_list.lean  test_no_decide.lean  test_simple.lean  test_sorry.lean  test_works.lean
verification/examples/: best_sparse_tiers.rs  check_hybrid_offsets.rs  explore_offsets.rs  frobenius_coopt.rs  frobenius_search.rs  optimize_per_scale.rs  opwf_analysis.rs  run_all_sweeps.rs
verification/output/: gate_equilibrium.json  knob_interactions.json  layer_placement_single.json  offset_space_2d.json  offset_space_budget_44.json  per_scale_optimization.json  scale_embed_dynamics.json
verification/src/: advanced_annealing.rs  agc_dynamic_gain.rs  beamforming_coherent.rs  coherent_scale_retrieval.rs  cond_d_db4.rs  cond_m.rs  cond_o.rs  condl_ablation.rs  condm_actual.rs  condm_sawtooth.rs  condn_condp_theorems.lean  coupling_stability.rs  coverage_attractor.rs  d41_scale_search.rs  depth_resonance.rs  depth_scaling_optimizer.rs  dsqg.rs  dsqg_chinchilla.rs  ema_alpha_formula.lean  ema_alpha_theorems.lean  ema_window_retrieval_snr.rs  fk_norm.rs  frobenius_coopt_search.rs  gate_equilibrium.rs  (+41 more)
(+370 files in other folders)
